Updated html file and python file

--- a/Template/page.html
+++ b/Template/page.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<link rel="stylesheet" href="page.css">
+    <link href="{{ url_for('static', path='page.css') }}" rel="stylesheet">
 <title> Annie's World </title>
 
 </head>
