updated html file

--- a/Template/page.html
+++ b/Template/page.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link href="{{ url_for('static', path='page.css') }}" rel="stylesheet">
+    <link href="page.css" type="text/css" rel="stylesheet">
 <title> Annie's World </title>
 
 </head>
